# TrainUS

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TrainUS.code-workspace
Applications/: CMakeLists.txt
Applications/TrainUSApp/: CMakeLists.txt  Main.cxx  qTrainUSAppMainWindow.cxx  qTrainUSAppMainWindow.h  qTrainUSAppMainWindow_p.h  slicer-application-properties.cmake
Applications/TrainUSApp/Resources/: App.qrc
Applications/TrainUSApp/Resources/Icons/: DesktopIcon.icns
Applications/TrainUSApp/Resources/Settings/: DefaultSettings.ini
Applications/TrainUSApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Modules/Evaluator/: CMakeLists.txt  Evaluator.py
Modules/Evaluator/Resources/UI/: Evaluator.ui
Modules/ExerciseAbscessDrainage/: CMakeLists.txt  ExerciseAbscessDrainage.py
Modules/ExerciseAbscessDrainage/Resources/ExerciseAbscessDrainage/: StylusToTracker.h5
Modules/ExerciseAbscessDrainage/Resources/ExerciseAbscessDrainageData/: Image_Reference.nrrd  NeedleToTracker.h5
Modules/ExerciseAbscessDrainage/Resources/UI/: ExerciseAbscessDrainage.ui
Modules/ExerciseInPlaneNeedleInsertion/: CMakeLists.txt  ExerciseInPlaneNeedleInsertion.py
Modules/ExerciseInPlaneNeedleInsertion/Resources/ExerciseInPlaneNeedleInsertionData/: Image_Reference.nrrd  NeedleToTracker.h5  StylusToTracker.h5
Modules/ExerciseInPlaneNeedleInsertion/Resources/UI/: ExerciseInPlaneNeedleInsertion.ui
Modules/ExerciseInPlaneNeedleInsertion/TrainUsUtilities/: LayoutManager.py  LayoutUtils.py  MetricCalculationManager.py  MetricCalculationUtils.py  PlaybackPlotChartManager.py  SequenceBrowserManager.py  SequenceBrowserUtils.py  __init__.py
Modules/ExerciseLumbarInsertion/: ExerciseLumbarInsertion.py
Modules/ExerciseLumbarInsertion/Resources/ExerciseLumbarInsertionData/: ProbeToTracker.h5  Recording_Info.json  TrackerToPatient.h5
Modules/ExerciseLumbarInsertion/Resources/UI/: ExerciseLumbarInsertion.ui
Modules/ExerciseLumbarInsertion/TrainUsUtilities/: PlaybackPlotChartUtils.py
Modules/ExerciseOutPlaneNeedleInsertion/: CMakeLists.txt  ExerciseOutPlaneNeedleInsertion.py
Modules/ExerciseOutPlaneNeedleInsertion/Resources/ExerciseOutPlaneNeedleInsertionData/: ProbeToTracker.h5
Modules/ExerciseOutPlaneNeedleInsertion/Resources/UI/: ExerciseOutPlaneNeedleInsertion.ui
Modules/ExerciseVascular/: CMakeLists.txt  ExerciseVascular.py
Modules/ExerciseVascular/Resources/UI/: ExerciseVascular.ui
Modules/Home/: CMakeLists.txt  Home.py  __init__.py
Modules/Home/Managers/: DataManager.py  DeviceManager.py  RecordingManager.py  __init__.py
Modules/Home/Resources/: HomeResources.qrc
Modules/Home/Resources/UI/: AdvancedTraining.ui  BasicTraining.ui  Configuration.ui  Dashboard.ui  Evaluation.ui  HardwareSelection.ui  Home.ui  LanguageFile_English.json  LanguageFile_Spanish.json  ParticipantSelection.ui  Participants.ui  PlugAndPlay.ui  Recordings.ui  ReviewSelection.ui  TrainingSession.ui
Modules/Home/TabWidgets/: AdvancedTraining.py  BasicTraining.py  Configuration.py  Dashboard.py  Participants.py  Recordings.py  __init__.py
Modules/Home/TrainUsUtilities/: DeviceManager.py  LayoutUtils.py  RecordingManager.py  __init__.py
Modules/Home/Widgets/: Configuration.py  Evaluation.py  HardwareSelection.py  ParticipantSelection.py  PlugAndPlay.py  ReviewSelection.py  TrainingSession.py  __init__.py
Modules/PlusServerConnection/: CMakeLists.txt  PlusServerConnection.py
Modules/PlusServerConnection/Resources/UI/: PlusServerConnection.ui
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/ToolPivotCalibration/: CMakeLists.txt  ToolPivotCalibration.py
Modules/ToolTrackingStatus/: CMakeLists.txt  ToolTrackingStatus.py
Modules/TrainUS/: CMakeLists.txt  TrainUS.py
Modules/TrainUS/Resources/: TrainUS.qss  TrainUSResources.qrc
Modules/TrainUS/Resources/DeviceConfig/: Device_Info.json  Tracker_OptitrackDuo_PlusConfigFile.xml  Tracker_OptitrackDuo_ProjectFile.ttp  Tracker_Simulator_PlusConfigFile.xml  Tracker_trakSTAR3DGuidance_PlusConfigFile.xml  Ultrasound_SimulatorConvexProbe_PlusConfigFile.xml  Ultrasound_SimulatorLinearProbe_PlusConfigFile.xml  Ultrasound_TelemedMicrUsConvexProbe_PlusConfigFile.xml  Ultrasound_TelemedMicrUsLinearProbe_PlusConfigFile.xml
Modules/TrainUS/Resources/Devices/Optitrack Duo (OTS)/: Device_Info.json
Modules/TrainUS/Resources/Devices/Optitrack Duo (OTS)/Config/: PlusDeviceSet_Server_OptiTrack_TTPandTRA.xml  Probe.tra  Stylus.tra  Tracker_Plus_Config_File.slicer.xml
Modules/TrainUS/Resources/Devices/Optitrack OTS/: Device_Info.json
Modules/TrainUS/Resources/Devices/Simulated Tracker/: Device_Info.json
Modules/TrainUS/Resources/Devices/Simulated Tracker/Config/: Replay_Tracker_config.xml
Modules/TrainUS/Resources/Devices/Simulated US - Convex Probe/: Device_Info.json
Modules/TrainUS/Resources/Devices/Simulated US - Convex Probe/Config/: Replay_US_Convex_config.xml
Modules/TrainUS/Resources/Devices/Simulated US - Linear Probe/: Device_Info.json
Modules/TrainUS/Resources/Devices/Simulated US - Linear Probe/Config/: Replay_US_Linear_config.xml  Ultrasound_Plus_Config_File.slicer.xml
Modules/TrainUS/Resources/Devices/Telemed MicrUS - Convex Probe/: Device_Info.json
Modules/TrainUS/Resources/Devices/Telemed MicrUS - Convex Probe/Config/: PlusDeviceSet_Server_TelemedVideoCapture.xml
Modules/TrainUS/Resources/Devices/Telemed MicrUS - Linear Probe/: Device_Info.json
Modules/TrainUS/Resources/Devices/Telemed MicrUS - Linear Probe/Config/: PlusDeviceSet_Server_TelemedVideoCapture.xml
Modules/TrainUS/Resources/Devices/trakSTAR 3D Guidance (EMTS)/: Device_Info.json
Modules/TrainUS/Resources/UI/: Settings.ui  TrainUS.ui
Modules/TrainUS/TrainUSLib/: TrainUSParameters.py  __init__.py
Modules/UltrasoundDisplaySettings/: CMakeLists.txt  UltrasoundDisplaySettings.py
Modules/UltrasoundProbeCalibration/: CMakeLists.txt  UltrasoundProbeCalibration.py
Scripts/: CommonVars.bat  CreatePackage.bat  DartConfiguration.tcl.in  TrainUS_Debug_Build.bat  TrainUS_Debug_LaunchVisualStudio.bat  TrainUS_Release_Build.bat  Z_CopySourceFiles.bat
(+99 files in other folders)
